[package]
name = "romhack"
version = "0.1.0"
authors = ["Christopher Serr <cryze92@gmail.com>"]

[dependencies]
rustc-demangle = "0.1.9"
goblin = { version = "0.0.15", default-features = false, features = ["std", "elf32", "elf64", "archive", "endian_fd"] }
byteorder = "1.2.4"
toml = "0.4.6"
serde_derive = "1.0.70"
serde = "1.0.70"
standalone-syn = { version = "0.13.0", default-features = false, features = ["parsing", "derive"] }
encoding_rs = "0.8.4"
image = "0.19.0"
regex = "1.0.2"
structopt = "0.2.10"
failure = "0.1.2"
termcolor = "1.0.1"
zip = "0.4.2"

[profile.release]
panic = "abort"
lto = true
