[package]
name = "romhack"
version = "0.1.0"
authors = ["Christopher Serr <cryze92@gmail.com>"]

[workspace]
members = ["backend", "wasm", "ui"]

[dependencies]
romhack-backend = { path = "backend" }
structopt = "0.2.10"
termcolor = "1.0.1"
failure = "0.1.2"

[profile.release]
panic = "abort"
lto = true

[patch.crates-io]
miniz_oxide_c_api = { git = "https://github.com/Frommi/miniz_oxide" }
flate2 = { git = "https://github.com/eminence/flate2-rs", rev = "be78c5a693a275452c71c7d26d369332629e8fb7" }
